Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34362

MSVC2013 (64 bit) warns: src\corelib\tools\qcryptographichash.cpp:204: warning: C4316: 'QCryptographicHashPrivate' : object allocated on the heap may not be aligned 32

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 5.2.0 Beta1
    • Core: Other
    • None
    • MS Windows 8.1, MSVC2013 64bit
    • 191f96cb8817a6d1632331c67f4f8d45535205e1

    Description

      The autotest passes, still it is a bit unsettling.

      I can't find any fiddling with alignment specifications at first sight.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            smd Jan Arve
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes